<resources>
    <string name="app_name">私密空间</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="exit">Exit</string>
    <string name="about">About</string>
    <string name="save">Save</string>
    <string name="tips">休将白发唱黄鸡</string>
    <string name="secret_level">保密等级</string>
    <string name="normal_level">普通</string>
    <string name="high_level">高级</string>
    <string name="input_value">输入内容</string>
    <string name="title">请输入标题</string>
    <string name="save_success">保存成功</string>
    <string name="modify">Modify</string>
    <string name="save_unsuccess">保存失败</string>
    <string name="delete_p">删除(%1$s)</string>
    <string name="delete_success">删除成功</string>
    <string name="sure_delete">是否删除？</string>
    <string name="delete_tips">温馨提示</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="about_content">赵客缦胡缨，吴钩霜雪明。 银鞍照白马，飒沓如流星。 \n十步杀一人，千里不留行。 事了拂衣去，深藏身与名。 \n闲过信陵饮，脱剑膝前横。 将炙啖朱亥，持筋劝侯赢。 \n三杯吐然诺，五岳倒为轻。 眼花耳热后，意气素霓生。 \n救赵挥金槌，邯郸先震惊。 千秋二壮士，烜赫大梁城。</string>
    <string name="li_bai">侠客行</string>
    <string name="copy_right">DEVELOPER: WanJf</string>
    <string name="finger">Finger</string>
    <string name="finger_verify">指纹验证</string>
    <string name="please_verification">请验证指纹</string>

    <string name="biometric_dialog_cancel">取消</string>
    <string name="biometric_dialog_title">Verification</string>
    <string name="biometric_dialog_subtitle">指纹验证中&#8230;></string>
    <string name="biometric_dialog_state_normal">指纹传感器</string>
    <string name="biometric_dialog_state_failed">验证失败，请重试</string>
    <string name="biometric_dialog_state_error">验证错误，请尝试其他方式</string>
    <string name="biometric_dialog_state_error_enable_process">Verification error, setup failed</string>
    <string name="biometric_dialog_state_succeeded">验证成功</string>
    <string name="biometric_dialog_use_password">使用密码</string>
    <string name="pwd_verify">密码验证</string>
    <string name="setting_pwd">设置密码</string>
    <string name="set_pwd_tip">设置一个xue微复杂点的密码</string>
    <string name="input_pwd_len_six">请输入6位数的密码</string>
    <string name="confirm_pwd">请确认密码</string>
    <string name="what_are_you_thinking_about">你想啥呢？输入密码啊！</string>
    <string name="ok">OK</string>
    <string name="pwd_nu_equals">请保持密码一致：%1$s — %2$s</string>
    <string name="yes_is_me">我就是我，不一样的烟火</string>
    <string name="opps_unsuccess">设置密码失败</string>
    <string name="verify_success">验证成功</string>
    <string name="verify_unsuccess">验证失败</string>
    <string name="find_password">Find Password</string>
    <string name="find_pwd_title">找回密码</string>
    <string name="find_find">想找回密码？找开发者调试代码找回啊！</string>
    <string name="no_datas_opps">没有数据，你删除个毛线哦</string>
    <string name="modify_pwd">Modify Password</string>
    <string name="modify_pwd_title">修改密码</string>
    <string name="modify_wtf">改个锤子哦，手机指纹传感器都没得？</string>
    <string name="verify_pwd">验证密码</string>
    <string name="incorrect_pwd">密码错咯，重新输入</string>
    <string name="no_data">没有数据</string>
    <string name="load_more">加载更多</string>
</resources>
