<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">
<!--    app:showAsAction="ifRoom"-->
    <item android:id="@+id/action_add"
        app:showAsAction="never"
        android:title="@string/add"/>
    <item android:id="@+id/action_delete"
        app:showAsAction="never"
        android:title="@string/delete"/>
    <item android:id="@+id/find_password"
        app:showAsAction="never"
        android:title="@string/find_password"/>
    <item android:id="@+id/modify_password"
        app:showAsAction="never"
        android:title="@string/modify_pwd"/>
    <item android:id="@+id/action_exit"
        app:showAsAction="never"
        android:title="@string/exit"/>
    <item android:id="@+id/action_mine"
        app:showAsAction="never"
        android:title="@string/about"/>
    <item android:id="@+id/finger"
        app:showAsAction="ifRoom"
        android:icon="@mipmap/dactylogram"
        android:title="@string/finger" />
    <item android:id="@+id/pwd"
        app:showAsAction="ifRoom"
        android:visible="false"
        android:icon="@mipmap/pwd_locked"
        android:title="@string/finger" />
</menu>