<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/id_pwd_old"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/edit_bg"
        android:autofillHints="@string/verify_pwd"
        android:inputType="textPassword"
        android:maxLength="6"
        android:hint="@string/verify_pwd"
        android:padding="10dp"
        android:textColor="@color/black"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/id_pwd"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/id_pwd_old"
        android:background="@drawable/edit_bg"
        android:autofillHints="@string/cancel"
        android:inputType="textPassword"
        android:maxLength="6"
        android:hint="@string/input_pwd_len_six"
        android:padding="10dp"
        android:textColor="@color/black"
        android:layout_height="wrap_content"/>



    <EditText
        android:id="@+id/id_pwd_confirm"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/id_pwd"
        android:background="@drawable/edit_bg"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/cancel"
        android:hint="@string/confirm_pwd"
        android:maxLength="6"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/black"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>