<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:layout_width="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20dp"
        android:text="@string/li_bai"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        android:lineSpacingMultiplier="1.5"
        android:layout_marginBottom="30dp"
        android:text="@string/about_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        android:text="@string/copy_right"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>