<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/secret_level"
        app:layout_constraintTop_toTopOf="@+id/id_level"
        app:layout_constraintBottom_toBottomOf="@+id/id_level"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        android:layout_height="wrap_content"/>

    <Spinner
        android:id="@+id/id_level"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:entries="@array/levels"
        app:layout_constraintTop_toTopOf="parent"
        android:spinnerMode="dialog"
        android:layout_height="wrap_content"/>

<!--    标题来一个？-->
    <EditText
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/id_level"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_bg"
        android:id="@+id/id_title"
        android:hint="@string/title"
        android:textSize="15sp"
        android:padding="10dp"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@drawable/edit_bg"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/id_title"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/id_clear"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/input_value"
            android:autofillHints="@string/input_value"
            android:textSize="15sp"
            android:gravity="top"
            android:minLines="5"
            android:padding="10dp"
            android:background="@null"
            android:id="@+id/id_value"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/id_clear"
            android:layout_width="20dp"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@mipmap/close"
            android:layout_margin="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="20dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>